center section titles using flexbox

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,10 +147,11 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 25px auto;
+    width: 50%;
   }
   
   .primary-border {
@@ -161,20 +162,16 @@ section {
     border-color: #39a6b2;
   }
 
-.intro {
-    text-align: center;
-}
-
 .intro p { 
     margin: 0 auto;
     line-height: 1.7;
     color: #39a6b2;
     width: 80%;
     font-size: 20px;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
 }
 
@@ -206,7 +203,6 @@ section {
 /* start trainers */
 
   .trainers {
-      text-align: center;
   }
 
   .trainer {
@@ -228,14 +224,6 @@ section {
     width: 65%;
 }
 
-.text-left {
-    text-align: left;
-}
-
-.text-right {
-    text-align: right;
-}
-
 .trainer-bio h3 {
     font-size: 32px;
     margin-bottom: 8px;
@@ -255,7 +243,6 @@ section {
 
 /* start contact */
 .contact {
-    text-align: center;
     background: #024e76;
   }
 
@@ -293,3 +280,17 @@ section {
     color:#fce138;
 }
 /* end contact */
+
+
+.text-left {
+    text-align: left;
+}
+
+.text-right {
+    text-align: right;
+}
+
+.flex-row {
+    display: flex;
+}
+
