--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,6 +141,7 @@ section {
     padding: 10px 20px;
     font-size: 16px;
 }
+
 /* Hero Style End */
 
 
@@ -152,17 +153,17 @@ section {
     text-align: center;
     margin: 0 auto 25px auto;
     width: 50%;
-  }
-  
-  .primary-border {
-    border-color: #fce138;
-  }
-  
-  .secondary-border {
-    border-color: #39a6b2;
-  }
+}
 
-.intro p { 
+.primary-border {
+    border-color: #fce138;
+}
+
+.secondary-border {
+    border-color: #39a6b2;
+}
+
+.intro p {
     margin: 0 auto;
     line-height: 1.7;
     color: #39a6b2;
@@ -198,7 +199,7 @@ section {
     flex-wrap: wrap;
     align-items: center;
 }
-  
+
 .step-text {
     flex: 12;
 }
@@ -225,49 +226,50 @@ section {
 
 /* start trainers */
 
-  .trainers {
-  }
+.trainers {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
 
-  .trainer {
-    width: 900px;
-    margin: 0 auto 30px auto;
+.trainer {
+    margin: 20px;
     background: #024e76;
     color: #fce138;
-    overflow: auto;
-  }
+    flex: 1;
+}
 
-  .trainer img {
-      width: 35%;
-      float: left;
-  }
+.trainer img {
+    width: 100%;
+}
 
 .trainer-bio {
-    padding: 35px;
-    float: left;
-    width: 65%;
+    padding: 25px;
+    line-height: 1.3;
 }
 
 .trainer-bio h3 {
-    font-size: 32px;
-    margin-bottom: 8px;
+    font-size: 28px;
 }
 
 .trainer-bio h4 {
     font-weight: lighter;
-    font-size: 26px;
-    margin-bottom: 25px;
+    font-size: 22px;
+    margin-bottom: 15px;
 }
 
 .trainer-bio p {
     font-size: 17px;
-    line-height: 1.3;
 }
+
 /* end trainers */
 
 /* start contact */
 .contact {
     background: #024e76;
-  }
+}
 
 .contact h2 {
     color: #fce138;
@@ -292,16 +294,18 @@ section {
     font-size: 32px;
 }
 
-.contact-info p, .contact-info address {
+.contact-info p,
+.contact-info address {
     margin: 20px 0;
     line-height: 1.5;
     font-size: 20px;
-    font-style:normal;
+    font-style: normal;
 }
 
 .contact-info a {
-    color:#fce138;
+    color: #fce138;
 }
+
 /* end contact */
 
 
@@ -316,4 +320,3 @@ section {
 .flex-row {
     display: flex;
 }
-
